--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-4": { "Indiegogo\\": "src" }
+        "psr-4": { "Indiegogo\\": "src/" }
     }
 }
